# ponscripter-fork

./: .gitignore  .travis.yml  AVIWrapper.cpp  AVIWrapper.h  AnimationInfo.cpp  AnimationInfo.h  BUGS  BaseReader.h  CHANGES  CHANGES.haeleth  DirectReader.cpp  DirectReader.h  DirtyRect.cpp  DirtyRect.h  FontInfo.cpp  FontInfo.h  Fontinfo.cpp  Fontinfo.h  INSTALL  INSTALL.md  MANIFEST  MANUAL  MadWrapper.cpp  MadWrapper.h  Makefile.ARMLinux  Makefile.Linux  Makefile.Linux.insani  Makefile.MacOSX  Makefile.MacOSX.haeleth  Makefile.MacOSX.insani  Makefile.MinGW  Makefile.PSP  Makefile.Win  Makefile.Win32  Makefile.extlibs  Makefile.iPodLinux  Makefile.onscripter  Makefile.ponscripter  NsaReader.cpp  NsaReader.h  (+95 more)
debian/: changelog  control  copyright  rules
doc/: html.entities  index.html  man.entities  manual.xml.in  ponscr-ext.7  ponscr-ext.7.xml  ponscr-syntax.7  ponscr-syntax.7.xml  ponscr.6  ponscr.6.xml  ponscripter-syntax.7  ponscripter.7  ponscripter.7.xml  prototypes  rn01.html  rn01re01.html  rn01re02.html  rn01re03.html  rn01re04.html
extlib/: Makefile  configure_mixer_libs
extlib/src/SDL_image-1.2.5/: Makefile.am  Makefile.in  configure  configure.in
fonts/: README
misc/: ponscripter-mode.el
src/: AVIWrapper.cpp  AVIWrapper.h  Accessibility.cpp  Accessibility.h  AnimationInfo.cpp  AnimationInfo.h  BaseReader.h  DirPaths.cpp  DirPaths.h  DirectReader.cpp  DirectReader.h  DirtyRect.cpp  Fontinfo.cpp  Fontinfo.h  Makefile.extlibs  Makefile.game  Makefile.narci2  Makefile.ponscripter  NsaReader.cpp  NsaReader.h  Ponscripter.cpp  PonscripterLabel.cpp  PonscripterLabel.h  PonscripterLabel_animation.cpp  PonscripterLabel_command.cpp  PonscripterLabel_effect.cpp  PonscripterLabel_effect_breakup.cpp  PonscripterLabel_effect_cascade.cpp  (+48 more)
src/extlib/src/smpeg/: .cvsignore  CHANGES  MPEG.cpp  MPEGlist.cpp  MPEGsystem.cpp  Makefile.am  README  acinclude.m4  configure  configure.in  gcc-fat.sh  mkinstalldirs  smpeg.cpp  smpeg.m4
src/extlib/src/smpeg/PBProjects/: README.txt  uninstall.csh
src/extlib/src/smpeg/PBProjects/English.lproj/: InfoPlist.strings
src/extlib/src/smpeg/PBProjects/exports/: README.txt  gendef.pl
src/extlib/src/smpeg/PBProjects/pkg-support/: smpeg-devel.info  smpeg.info
src/extlib/src/smpeg/PBProjects/pkg-support/resources/: Welcome.txt
src/extlib/src/smpeg/PBProjects/smpeg.pbproj/: project.pbxproj
src/extlib/src/smpeg/audio/: .cvsignore  MPEGaudio.cpp  mpeglayer3.cpp  mpegtoraw.cpp
src/extlib/src/smpeg/video/: .cvsignore
test/: 0.txt  (+2 more)
(+149 files in other folders)
